// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation CreateItem return the created item 1`] = `
Object {
  "data": Object {
    "CreateItem": Object {
      "name": "2046",
    },
  },
}
`;

exports[`Mutation CreateItem throw error if name is missing 1`] = `
Object {
  "data": Object {
    "CreateItem": null,
  },
  "errors": Array [
    [GraphQLError: Item validation failed: name: Path \`name\` is required.],
  ],
}
`;

exports[`Mutation CreateUser return the created user 1`] = `
Object {
  "data": Object {
    "CreateUser": Object {
      "name": "Jack Daniel",
    },
  },
}
`;

exports[`Mutation CreateUser throws error if email already existed 1`] = `
Object {
  "data": Object {
    "CreateUser": null,
  },
  "errors": Array [
    [GraphQLError: E11000 duplicate key error dup key: { : "john.cage@test.com" }],
  ],
}
`;

exports[`Mutation CreateUser throws error if email is missing 1`] = `
Object {
  "data": Object {
    "CreateUser": null,
  },
  "errors": Array [
    [GraphQLError: User validation failed: email: Path \`email\` is required.],
  ],
}
`;

exports[`Mutation DeleteItem return the deleted item 1`] = `
Object {
  "data": Object {
    "DeleteItem": Object {
      "_id": "4edd40c86762e0fb12000013",
      "name": "Imagine",
    },
  },
}
`;

exports[`Mutation DeleteUser return the deleted user 1`] = `
Object {
  "data": Object {
    "DeleteUser": Object {
      "_id": "4edd40c86762e0fb12000004",
      "name": "John Lennon",
    },
  },
}
`;

exports[`Mutation UpdateItem return the updated item 1`] = `
Object {
  "data": Object {
    "UpdateItem": Object {
      "_id": "4edd40c86762e0fb12000013",
      "name": "Working Class Hero",
    },
  },
}
`;

exports[`Mutation UpdateUser return the updated user 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "_id": "4edd40c86762e0fb12000004",
      "name": "John Lemon",
    },
  },
}
`;

exports[`Mutation UserDislikeItem return the updated user 1`] = `
Object {
  "data": Object {
    "UserDislikeItem": Object {
      "_id": "4edd40c86762e0fb12000004",
      "likeItems": Array [],
      "name": "John Lennon",
    },
  },
}
`;

exports[`Mutation UserFollowUser return the updated follower 1`] = `
Object {
  "data": Object {
    "UserFollowUser": Object {
      "_id": "4edd40c86762e0fb12000005",
      "followees": Array [
        Object {
          "name": "John Lennon",
        },
      ],
      "name": "Miles Davis",
    },
  },
}
`;

exports[`Mutation UserLikeItem return the updated user 1`] = `
Object {
  "data": Object {
    "UserLikeItem": Object {
      "_id": "4edd40c86762e0fb12000005",
      "likeItems": Array [
        Object {
          "name": "Imagine",
        },
      ],
      "name": "Miles Davis",
    },
  },
}
`;

exports[`Mutation UserUnfollowUser return the updated follower 1`] = `
Object {
  "data": Object {
    "UserUnfollowUser": Object {
      "_id": "4edd40c86762e0fb12000004",
      "followees": Array [],
      "name": "John Lennon",
    },
  },
}
`;
